--- a/QuizApplication/Views/Home/Privacy.cshtml
+++ b/QuizApplication/Views/Home/Privacy.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Polityka prywatności";
 }
+
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p class="text-muted">
+    Ta strona zawiera informacje o polityce prywatności aplikacji.
+</p>
