--- a/QuizApplication/Views/Quizzes/Delete.cshtml
+++ b/QuizApplication/Views/Quizzes/Delete.cshtml
@@ -3,30 +3,39 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+@{
+    ViewData["Title"] = "Usuń quiz";
+}
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Quiz</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AccessCode)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AccessCode)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<h1 class="mb-4 text-danger">🗑Usuń quiz</h1>
+
+<div class="alert alert-warning">
+    <h4 class="alert-heading">Czy na pewno chcesz usunąć ten quiz?</h4>
+    <p>Ta operacja jest <strong>nieodwracalna</strong>. Usunięte zostaną również wszystkie pytania i odpowiedzi.</p>
+</div>
+
+<div class="card shadow-sm">
+    <div class="card-body">
+        <dl class="row mb-0">
+            <dt class="col-sm-3">Tytuł</dt>
+            <dd class="col-sm-9"><strong>@Model.Title</strong></dd>
+
+            <dt class="col-sm-3">Kod dostępu</dt>
+            <dd class="col-sm-9"><span class="badge bg-primary">@Model.AccessCode</span></dd>
+
+            <dt class="col-sm-3">Liczba pytań</dt>
+            <dd class="col-sm-9">@Model.Questions.Count</dd>
+        </dl>
+    </div>
+    <div class="card-footer bg-transparent">
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger">
+                Tak, usuń quiz
+            </button>
+            <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">
+                Anuluj
+            </a>
+        </form>
+    </div>
 </div>
