--- a/QuizApplication/Views/_ViewImports.cshtml
+++ b/QuizApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using QuizApplication
 @using QuizApplication.Models
+@using QuizApplication.DTOs
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
