usunięcie view models. Refaktoryzacja

--- a/QuizApplication/Views/Game/Play.cshtml
+++ b/QuizApplication/Views/Game/Play.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizApplication.Models.ViewModels.PlayViewModel
+﻿<!-- model QuizApplication.Models.ViewModels.PlayViewModel
 @{
     ViewData["Title"] = "Quiz";
 }
