--- a/QuizApplication/Views/Game/PlayHost.cshtml
+++ b/QuizApplication/Views/Game/PlayHost.cshtml
@@ -1,4 +1,4 @@
-﻿@model QuizApplication.Models.ViewModels.PlayHostViewModel
+﻿<!--model QuizApplication.Models.ViewModels.PlayHostViewModel
 @{
     ViewData["Title"] = "Gra (Host)";
 }
@@ -39,3 +39,5 @@
         client.connect();
     </script>
 }
+
+-->
