--- a/QuizApplication/Views/Shared/Error.cshtml
+++ b/QuizApplication/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@using QuizApplication.Models.ViewModels
+﻿@using QuizApplication.Models
 @model ErrorViewModel
 @{
     ViewData["Title"] = "Błąd";
