--- a/QuizApplication/Views/Shared/_Layout.cshtml
+++ b/QuizApplication/Views/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
                                 <a class="nav-link" asp-controller="Quizzes" asp-action="Index">Moje quizy</a>
                             </li>
                         }
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Game" asp-action="Join">Dołącz do gry
+                            </a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
